    - develop a PyCharm plugin for FactoryBuilder type hints, and mod dev stuff


changelog of snapshot <21w23a> released on <?> targeting <21w20a>
    Networking:
        - further work on the network system

    Event system:
        - improved internal event bus system

    Mod loader:
        - moved ExtensionPoint class to mod package [MP4-11]

    JavaFML:
        - implement a JVM in python for loading minecraft: java edition mods
        - added transformer system for transforming java bytecode defined objects into readable code for our loader

        The following mods are known to load partially:
            - biomesoplenty, tested with 1.16.5-13.1.0.465

        Any other mod may or may not load; Implementation wrappers for parts are welcome to be PR'ed
        We cannot guarantee any mod to load as out system changes rapidly

    Storage:
        - improved storage of block palette and entities
        - improved general storage layout


changelog of snapshot 21w20a released on 19.5.2021 targeting 21w19a
    This snapshot again breaks backwards compatibility.
    We have refactored again some stuff

    Test Framework:
        - tweaked some stuff

    Commands:
        - added /chunk delete all command
        - added /chunk dumpdatadebug [all] command

    World generation:
        - added debug helper code for dumping the map structure in image format

    Modding:
        - removed the API management system
        - added extension point for other mod loaders

    Entity Rendering:
        - some small improvements

    Toolchain:
        - imports can now be also sorted, using the isort module

    Inventories:
        - implemented creative player inventory with creative tabs [data-driven, but extension point via events]

    Networking:
        - some smaller work on network handlers


changelog of snapshot 21w17a released on 28.04.2021 targeting 21w17a
    This snapshot breaks again compatibility, mainly the following: