@@ -1671,10 +1671,14 @@ R   [uuk]: improved world serialization API
 [uuk]: ModLoader will switch to a special state when error occurs during mod loading
 [uuk]: loading exceptions are now mostly FATAL and cannot be skipped
 [uuk]: implemented JVM -> BlockFactory transformer
+[uuk]: ModLoader assigns now the resource access to each Mod instance when loading
+[uuk]: JavaFML will now load all classes in class path of the mod
 
 pending:
 - fix hardcoded location lookup; load all class bytecode immediately and class-init when needed
 - fix hardcoded namespace in block factory transform
+
+pushed back:
 - implement more of the instructions
 - prepare for mc forge 1.17 [when it is released]
 
