@@ -61,6 +61,8 @@ changelog of snapshot <21w23a> released on <?> targeting <21w20a>
 
     Mod loader:
         - moved ExtensionPoint class to mod package [MP4-11]
+        - added ModLoader extension point for JavaFML
+        - mods have now a "resource_access" attribute holding the resource access of that mod
 
     JavaFML:
         - implement a JVM in python for loading minecraft: java edition mods
